[package]
name = "cs2_server_prestarter"
version = "1.0.0"
authors = ["Georgii Imeshkenov <georgiiimesh@gmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.26.0"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"


serde = { version = "1", features = ["derive"] }
execute = "0.2.13"
directories = "5.0.1"
steamlocate = "=2.0.0-beta.2"
linked-hash-map = "0.5.6"

[build-dependencies]
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"


[profile.release]
opt-level = 2
strip = true


[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
